lib/brevity/parsing/expression/dynamic.treetop
module Brevity

grammar Dynamic
  rule dynamic
    ppp / pp / p / mp / mf / fff / ff / f
  end
  
  rule ppp
    "ppp" <PianississimoNode>
  end
  
  rule pp
    "pp" <PianissimoNode>
  end
  
  rule p
    "p" <PianoNode>
  end
  
  rule mp
    "mp" <MezzoPianoNode>
  end
  
  rule mf
    "mf" <MezzoForteNode>
  end
  
  rule f
    "f" <ForteNode>
  end
  
  rule ff
    "ff" <FortissimoNode>
  end
  
  rule fff
    "fff" <FortississimoNode>
  end
end

end
